--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">1319681538122891</string>
     <string name="title_activity_home">HomeActivity</string>
-
+    <string name="logout">Logout</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
